Corrected the alignment of the connectivity notification.

--- a/src/main/webapp/less/module/footer.less
+++ b/src/main/webapp/less/module/footer.less
@@ -14,7 +14,7 @@
     &.connectivity .notifier {
       display: inline-block;
 
-      margin:  2px;
+      margin:  4px 2px 0 6px;
       padding: 2px 10px;
 
       border-radius: 10px;
